<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/vypocet_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/hodnoty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/a"
            android:labelFor="@id/value_a"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:text="@string/a"/>

        <EditText
            android:id="@+id/value_a"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/a"
            android:layout_toEndOf="@id/a"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@id/value_b" />

        <TextView
            android:id="@+id/b"
            android:labelFor="@id/value_b"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_alignBaseline="@id/a"
            android:layout_toEndOf="@id/value_a"
            android:textSize="30sp"
            android:text="@string/b"/>

        <EditText
            android:id="@+id/value_b"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/b"
            android:layout_alignBaseline="@+id/b"
            android:inputType="numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/c"
            android:labelFor="@id/value_c"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/a"
            android:layout_alignStart="@id/a"
            android:textSize="30sp"
            android:text="@string/c"/>

        <EditText
            android:id="@+id/value_c"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/c"
            android:layout_alignBaseline="@id/c"
            android:inputType="numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/d"
            android:labelFor="@id/value_d"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/a"
            android:layout_alignStart="@id/b"
            android:textSize="30sp"
            android:text="@string/d"/>

        <EditText
            android:id="@+id/value_d"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/d"
            android:layout_alignBaseline="@id/d"
            android:inputType="numberDecimal|numberSigned" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hodnoty"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/radio_button"
        android:button="@android:color/transparent"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/btn_kresli"/>

    <com.example.nax.vzorce.Kreslenie
        android:id="@+id/kreslenie"
        android:layout_below="@id/btn"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</RelativeLayout>
